feat: Refactor DefaultEdmProvider to use DataSource for database connections and enhance schema scanning